feat: queries & dynamic data

--- a/styles/_rooms_grid.scss
+++ b/styles/_rooms_grid.scss
@@ -19,7 +19,7 @@
 
         &__item {
             min-width: 100%;
-
+            margin-bottom: 20px;
             @media only screen and (min-width: 1000px) {
                 min-width: unset;
                 width: 370px;
