--- a/styles/_room_detail.scss
+++ b/styles/_room_detail.scss
@@ -1,29 +1,100 @@
-  ul {
-      list-style-type: none;
-      list-style-position: inside;
-      column-count: 2;
-      column-gap: 10px;
+.room_detail {
+    @media only screen and (min-width: 1000px) {
+        margin: 120px auto;
+        width: calc(80% - 10px);
+        max-width: 1170px;
+    }
+    display: flex;
+    &__left{
+        width: 70%;
+        &__photobox {
+            position: relative;
+            .description {
+                padding: 25px 40px;
+                background-color: white;
+                width: 90%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                position: absolute;
+                left: 20px;
+                top: -60px;
+                &__title {
+                    h4 {
+                        color: #777777;
+                        font-family: Archivo;
+                        font-size: 14px;
+                        font-weight: 700;
+                        line-height: 15.23px;
+                        letter-spacing: 2.8px;
+                        text-align: left;
+                        margin-bottom: 15px;
+                    }
+                    h2 {
+                        font-family: Old Standard TT;
+                        font-size: 48px;
+                        font-weight: 400;
+                        line-height: 48px;
+                        letter-spacing: -1.440000057220459px;
+                        text-align: left;
+                    }
+                }
+                h5{
+                    font-family: Archivo;
+                    font-size: 40px;
+                    font-weight: 700;
+                    line-height: 43.52px;
+                    text-align: right;
+                    color: #BEAD8E;
+                    span {
+                        font-family: Archivo;
+                        font-size: 16px;
+                        font-weight: 700;
+                        line-height: 17.41px;
+                        text-align: right;
+                    }
+                }
+            }
+            img {
+                width: 100%;
+            }
+        }
+    }
+    &__right {
+        width: 30%;
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+}
 
-      :nth-child(5),
-      :nth-child(10) {
-          margin-bottom: 25px;
-      }
+//   ul {
+//       list-style-type: none;
+//       list-style-position: inside;
+//       column-count: 2;
+//       column-gap: 10px;
 
-      li {
-          font-family: Roboto, sans-serif;
-          font-weight: 500;
-          font-family: 15px;
-          line-height: 17px;
-          color: #777777;
-          white-space: nowrap;
-          margin-bottom: 17px;
+//       :nth-child(5),
+//       :nth-child(10) {
+//           margin-bottom: 25px;
+//       }
 
-      }
+//       li {
+//           font-family: Roboto, sans-serif;
+//           font-weight: 500;
+//           font-family: 15px;
+//           line-height: 17px;
+//           color: #777777;
+//           white-space: nowrap;
+//           margin-bottom: 17px;
 
-      img {
-          vertical-align: middle;
-          width: 16px;
-          height: 16px;
-          margin-right: 8px;
-      }
-  }
+//       }
+
+//       img {
+//           vertical-align: middle;
+//           width: 16px;
+//           height: 16px;
+//           margin-right: 8px;
+//       }
+//   }
