--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,7 @@
 @use "./styles/new_details";
 @use "./styles/rooms_grid";
 @use "./styles/room_detail";
+@use "./styles/roomSwiper";
 
 * {
     box-sizing: border-box;
