--- a/styles/_room_detail.scss
+++ b/styles/_room_detail.scss
@@ -3,12 +3,15 @@
         margin: 120px auto;
         width: calc(80% - 10px);
         max-width: 1170px;
+        flex-direction: row;
     }
+    flex-direction: column;
     display: flex;
     &__left{
         width: 70%;
         &__photobox {
             position: relative;
+            margin-bottom: 50px;
             .description {
                 padding: 25px 40px;
                 background-color: white;
@@ -20,7 +23,7 @@
                 left: 20px;
                 top: -60px;
                 &__title {
-                    h4 {
+                    h3 {
                         color: #777777;
                         font-family: Archivo;
                         font-size: 14px;
@@ -59,42 +62,109 @@
                 width: 100%;
             }
         }
+
+        h4{
+            font-family: Old Standard TT;
+            font-size: 30px;
+            font-weight: 400;
+            line-height: 30px;
+            text-align: left;
+            &:not(:last-child) {
+                margin-bottom: 50px;
+            }
+        }
+
+        p {
+            font-family: Roboto;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            text-align: left;
+            color: #777777;
+            margin-bottom: 90px;
+        }
+
+        ul {
+            list-style-type: none;
+            list-style-position: inside;
+            column-count: 2;
+            column-gap: 10px;
+            margin-bottom: 90px;
+
+            :nth-child(5),
+            :nth-child(10) {
+                margin-bottom: 25px;
+            }
+
+            li {
+                font-family: Roboto, sans-serif;
+                font-weight: 500;
+                font-family: 15px;
+                line-height: 17px;
+                color: #777777;
+                white-space: nowrap;
+                margin-bottom: 17px;
+
+            }
+
+            img {
+                vertical-align: middle;
+                width: 16px;
+                height: 16px;
+                margin-right: 8px;
+            }
+        }
+
+        .amenities, .cancelation {
+            margin-left: 50px;
+        }
     }
     &__right {
         width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 25px;
+        h3 {
+            font-family: Archivo;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 20px;
+            letter-spacing: -0.5px;
+        }
         form {
             display: flex;
             flex-direction: column;
+            width: 70%;
+            label {
+                font-family: Archivo;
+                font-size: 14px;
+                font-weight: 700;
+                line-height: 15.23px;
+                margin-bottom: 13px;
+                color: #222222;
+            }
+
+            input, textarea{
+                margin-bottom: 19px;
+                font-family: Archivo;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 15.23px;
+                color:  #777777;
+                padding: 30px 25px;
+                background-color: #F8F8F8;
+            }
+
+            button {
+                margin-top: 25px;
+                font-family: Archivo;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 15px;
+                letter-spacing: 2.8;
+
+            }
         }
     }
 }
-
-//   ul {
-//       list-style-type: none;
-//       list-style-position: inside;
-//       column-count: 2;
-//       column-gap: 10px;
-
-//       :nth-child(5),
-//       :nth-child(10) {
-//           margin-bottom: 25px;
-//       }
-
-//       li {
-//           font-family: Roboto, sans-serif;
-//           font-weight: 500;
-//           font-family: 15px;
-//           line-height: 17px;
-//           color: #777777;
-//           white-space: nowrap;
-//           margin-bottom: 17px;
-
-//       }
-
-//       img {
-//           vertical-align: middle;
-//           width: 16px;
-//           height: 16px;
-//           margin-right: 8px;
-//       }
-//   }
