--- a/style.css
+++ b/style.css
@@ -1931,6 +1931,7 @@
 }
 
 .room_detail {
+  flex-direction: column;
   display: flex;
 }
 @media only screen and (min-width: 1000px) {
@@ -1938,6 +1939,7 @@
     margin: 120px auto;
     width: calc(80% - 10px);
     max-width: 1170px;
+    flex-direction: row;
   }
 }
 .room_detail__left {
@@ -1945,6 +1947,7 @@
 }
 .room_detail__left__photobox {
   position: relative;
+  margin-bottom: 50px;
 }
 .room_detail__left__photobox .description {
   padding: 25px 40px;
@@ -1957,7 +1960,7 @@
   left: 20px;
   top: -60px;
 }
-.room_detail__left__photobox .description__title h4 {
+.room_detail__left__photobox .description__title h3 {
   color: #777777;
   font-family: Archivo;
   font-size: 14px;
@@ -1993,15 +1996,102 @@
 .room_detail__left__photobox img {
   width: 100%;
 }
+.room_detail__left h4 {
+  font-family: Old Standard TT;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+}
+.room_detail__left h4:not(:last-child) {
+  margin-bottom: 50px;
+}
+.room_detail__left p {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #777777;
+  margin-bottom: 90px;
+}
+.room_detail__left ul {
+  list-style-type: none;
+  list-style-position: inside;
+  column-count: 2;
+  column-gap: 10px;
+  margin-bottom: 90px;
+}
+.room_detail__left ul :nth-child(5),
+.room_detail__left ul :nth-child(10) {
+  margin-bottom: 25px;
+}
+.room_detail__left ul li {
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-family: 15px;
+  line-height: 17px;
+  color: #777777;
+  white-space: nowrap;
+  margin-bottom: 17px;
+}
+.room_detail__left ul img {
+  vertical-align: middle;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+}
+.room_detail__left .amenities, .room_detail__left .cancelation {
+  margin-left: 50px;
+}
 .room_detail__right {
   width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+.room_detail__right h3 {
+  font-family: Archivo;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: -0.5px;
 }
 .room_detail__right form {
   display: flex;
   flex-direction: column;
+  width: 70%;
+}
+.room_detail__right form label {
+  font-family: Archivo;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 15.23px;
+  margin-bottom: 13px;
+  color: #222222;
+}
+.room_detail__right form input, .room_detail__right form textarea {
+  margin-bottom: 19px;
+  font-family: Archivo;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 15.23px;
+  color: #777777;
+  padding: 30px 25px;
+  background-color: #F8F8F8;
+}
+.room_detail__right form button {
+  margin-top: 25px;
+  font-family: Archivo;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 2.8;
 }
 
 .roomSwiper {
+  overflow: hidden;
   height: 650px;
 }
 @media only screen and (min-width: 1000px) {
@@ -2019,7 +2109,6 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: -11px;
 }
 .roomSwiper .swiper-slide .rooms__description {
   position: absolute;
